<resources>
    <string name="app_name">StufeedApp</string>
    <string name="facebook_app_id">605147293204668</string>
    <string name="fb_login_protocol_scheme">fb605147293204668</string>
    <string name="ad_mob_id">ca-app-pub-3553456737383858~3003894872</string>
    <string name="ad_unit_id">ca-app-pub-3553456737383858/1698035148</string>
    <string name="expand">More</string>
    <string name="shrink">Less</string>
    <string name="alert">Alert!</string>
    <string name="wrong">Something went wrong, Try again later.</string>
    <string name="expand_string">More</string>
    <string name="collapsed_string">Less</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forgot Password</string>
    <string name="college">College</string>
    <string name="university">University</string>
    <string name="register_college_info">Are you an institute?</string>
    <string name="title_activity_home">Stufeed</string>
    <string name="title_person">You</string>
    <string name="title_connect">Connect</string>
    <string name="title_post">Post</string>
    <string name="title_board">Board</string>
    <string name="title_feed">Feed</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="all_required">All field required.</string>
    <string name="invalid_email">Enter valid email.</string>
    <string name="invalid_number">Enter valid number.</string>
    <string name="people_you_follow">People You Follow</string>
    <string name="saved_post">Saved Post</string>
    <string name="archive_board">Archive Board</string>
    <string name="blocked_user">Blocked User</string>
    <string name="library_board">Library Board</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title">Title&#8230;</string>
    <string name="description">Description&#8230;</string>
    <string name="verify_des">Now you can check your <b>Email box</b> for we have sent to you a <b>OTP</b> and enter to verify stufeed account.</string>
    <string name="general">General</string>
    <string name="achievement">Achievement</string>
    <string name="skill">Skills</string>
    <string name="about">About</string>
    <string name="academy">Academy</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="department">Department</string>
    <string name="follow">Follow</string>
    <string name="un_follow">UnFollow</string>
    <string name="create_board">Create Board</string>
    <string name="join_board">Join Board</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_edit_post">Edit Post</string>
    <string name="title_activity_comment_post">Comment</string>
    <string name="title_activity_board_list">BoardListActivity</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="register_institute">Register Your Institution</string>
    <string name="institute_detail">You are now just one step away enter your institution details to register</string>
    <string name="institute_name">Institution Name</string>
    <string name="institute_type">Institution Type</string>
    <string name="coaching">Coaching</string>
    <string name="school">School</string>
    <string name="select_university">Select Your University</string>
    <string name="address">Institute Address</string>
    <string name="inst_number">Institute Id Number (Optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="website">Website(Optional)</string>
    <string name="specialist">Specialisted In(Optional)</string>
    <string name="year_of_stablished">Year Of Established(Optional)</string>
    <string name="managed_by">Institute Managed By</string>
    <string name="error_university">Select University</string>
    <string name="error_institue_address">Enter Institute Address</string>
    <string name="error_city">Select City</string>
    <string name="error_state">Select State</string>
    <string name="error_institute_id_no">Enter Institute Id Number</string>
    <string name="error_institute_name">Enter Institution Name</string>
    <string name="error_email">Enter Email Address</string>
    <string name="error_pass">Enter Password</string>
    <string name="error_mobile">Enter Mobile Number</string>
    <string name="achievement_title">Achievement Title</string>
    <string name="issued_by">Issued by</string>
    <string name="issued_date">Issued date</string>
    <string name="requested_to_join_your_board">Requested to join your board</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="verify">Verify</string>
</resources>