<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.stufeed.android.api.response.GetJoinBoardRequestResponse.Request" />

        <variable
            name="adapter"
            type="com.stufeed.android.view.adapter.NotificationListAdapter" />
    </data>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requested_to_join_your_board"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_30dp"
                        android:background="@color/button_color"
                        android:onClick="@{()->adapter.acceptRequest(model)}"
                        android:text="@string/accept"
                        android:paddingTop="@dimen/dimen_3dp"
                        android:paddingBottom="@dimen/dimen_3dp"
                        android:paddingRight="@dimen/dimen_10dp"
                        android:paddingLeft="@dimen/dimen_10dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_30dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:background="@color/button_color"
                        android:onClick="@{()->adapter.rejectRequest(model)}"
                        android:paddingTop="@dimen/dimen_3dp"
                        android:paddingBottom="@dimen/dimen_3dp"
                        android:paddingRight="@dimen/dimen_10dp"
                        android:paddingLeft="@dimen/dimen_10dp"
                        android:text="@string/reject"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/grey_color" />
    </android.support.v7.widget.CardView>
</layout>