<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.stufeed.android.view.activity.LoginActivity" />

        <variable
            name="model"
            type="com.stufeed.android.view.viewmodel.LoginModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher_round" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/email_address">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:drawablePadding="16dp"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="12dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="12dp"
                        android:text="@={model.email}" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text"
                        android:drawablePadding="16dp"
                        android:inputType="textPassword"
                        android:paddingBottom="12dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="12dp"
                        android:text="@={model.password}" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.AppCompatButton
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:onClick="@{()->activity.onRegisterBtnClick()}"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatButton
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:onClick="@{()->activity.onLoginBtnClick(model)}"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/forget_password"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:onClick="@{()->activity.onForgotPasswordBtnClick()}"
                    android:text="@string/forget_password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/register_institute_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="@{()->activity.onRegisterInstituteBtnClick()}"
                    android:text="@string/register_college_info"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>