<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="position"
            type="Integer" />

        <variable
            name="adapter"
            type="com.stufeed.android.view.adapter.VerificationListAdapter" />

    </data>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/dimen_3dp"
            app:cardElevation="@dimen/dimen_3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="10dp">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"

                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher_round" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/textUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->adapter.onClickUserName(position)}"
                        android:text="@string/user_name"
                        android:textColor="@color/text_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/requested_to_join_your_board"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/dimen_3dp">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen_30dp"
                            android:background="@drawable/outline_theme_button"
                            android:onClick="@{()->adapter.acceptRequest(position)}"
                            android:paddingBottom="@dimen/dimen_3dp"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:paddingRight="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_3dp"
                            android:text="@string/verify"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen_30dp"
                            android:layout_marginStart="@dimen/dimen_16dp"
                            android:background="@drawable/outline_theme_button"
                            android:onClick="@{()->adapter.rejectRequest(position)}"
                            android:paddingBottom="@dimen/dimen_3dp"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:paddingRight="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_3dp"
                            android:text="@string/reject"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/grey_color" />
    </android.support.v7.widget.CardView>
</layout>