<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.stufeed.android.api.response.GetAchievementListResponse.Achievement" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardElevation="@dimen/dimen_3dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_10sp"
                        android:text="@string/achievement_title"/>
                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/dimen_5dp"
                        android:paddingRight="@dimen/dimen_5dp"
                        android:text="@{model.title}"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/common_color"
                        android:padding="@dimen/dimen_10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/edit_icon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_10sp"
                        android:text="@string/issued_date"/>

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:paddingLeft="@dimen/dimen_5dp"
                        android:paddingRight="@dimen/dimen_5dp"
                        android:text="@{model.issuedDate}"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/imageButtonDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/common_color"
                        android:padding="@dimen/dimen_10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/delete_icon" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_10sp"
                        android:text="@string/issued_by"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_50dp"
                        android:maxLines="3"
                        android:paddingLeft="@dimen/dimen_5dp"
                        android:paddingRight="@dimen/dimen_5dp"
                        android:text="@{model.issuedBy}"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/common_color"
                        android:padding="@dimen/dimen_10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/delete_icon" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>